[gd_scene load_steps=17 format=3 uid="uid://do3eo2cjda6ia"]

[ext_resource type="Script" uid="uid://y4ecka6m2iun" path="res://scripts/items/base_cauldron.gd" id="1_s78pq"]
[ext_resource type="Texture2D" uid="uid://cwaf2mn7nyvrx" path="res://assets/materials/base_cauldron_pots.tres" id="2_r4na0"]
[ext_resource type="Texture2D" uid="uid://djhrxl7tnpwrl" path="res://assets/textures/orange_square_texure.png" id="3_bvynq"]
[ext_resource type="Texture2D" uid="uid://dfrk4lixjx1h7" path="res://assets/textures/green_square_texure.png" id="4_ujv81"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_c5ltt"]
albedo_color = Color(0.372549, 0.372549, 0.372549, 1)
albedo_texture = ExtResource("2_r4na0")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2sofk"]
albedo_color = Color(0.374139, 0.374139, 0.374139, 1)
albedo_texture = ExtResource("2_r4na0")
uv1_scale = Vector3(10, 10, 10)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xe5dt"]
albedo_color = Color(0.372549, 0.372549, 0.372549, 1)
albedo_texture = ExtResource("2_r4na0")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uqslo"]
albedo_texture = ExtResource("3_bvynq")
uv1_triplanar = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_st1q8"]
albedo_color = Color(0, 0.884509, 0.231697, 1)
albedo_texture = ExtResource("4_ujv81")
emission_enabled = true
emission = Color(0, 1, 0, 1)
emission_energy_multiplier = 2.0
uv1_triplanar = true

[sub_resource type="CylinderMesh" id="CylinderMesh_lei01"]
top_radius = 0.25
bottom_radius = 0.25
height = 0.2

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_2sofk"]
particle_flag_rotate_y = true
emission_shape = 1
emission_sphere_radius = 0.25
angle_min = 1.07288e-05
angle_max = 1.07288e-05
spread = 0.0
gravity = Vector3(0, 1, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_lei01"]
albedo_color = Color(0, 1, 0.227451, 1)
emission_enabled = true
emission = Color(0, 1, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_g825k"]
material = SubResource("StandardMaterial3D_lei01")
size = Vector3(0.02, 0.02, 0.02)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2sofk"]
height = 0.05
radius = 0.3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g825k"]
albedo_texture = ExtResource("3_bvynq")
uv1_triplanar = true

[sub_resource type="BoxMesh" id="BoxMesh_ftolm"]
size = Vector3(2.9, 0.01, 2.5)

[node name="MultiPotionsCauldron" type="Node3D"]
script = ExtResource("1_s78pq")

[node name="CSGCombiner3D" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
material_override = SubResource("StandardMaterial3D_c5ltt")
use_collision = true

[node name="CSGSphere3D" type="CSGSphere3D" parent="CSGCombiner3D"]
use_collision = true
material = SubResource("StandardMaterial3D_2sofk")

[node name="CSGSphere3D2" type="CSGSphere3D" parent="CSGCombiner3D"]
transform = Transform3D(0.9, 0, 0, 0, 0.9, 0, 0, 0, 0.9, 0, 0, 0)
operation = 2

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="CSGCombiner3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.429289, 0)
operation = 2
radius = 0.223633
height = 0.298828
sides = 12

[node name="CSGCombiner3D2" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
material_override = SubResource("StandardMaterial3D_xe5dt")
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7, -0.2, 0)
size = Vector3(3, 0.5, 2.5)

[node name="CSGCylinder3D" type="CSGCylinder3D" parent="CSGCombiner3D2"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 1.38655, 3.45491, 0)
radius = 0.3
height = 4.0

[node name="CSGCylinder3D2" type="CSGCylinder3D" parent="CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.91999, 0)
radius = 0.6
height = 1.57002
sides = 16
cone = true

[node name="CSGCylinder3D3" type="CSGCylinder3D" parent="CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7, 2.91991, 0)
radius = 0.6
height = 1.57002
sides = 16
cone = true
material = SubResource("StandardMaterial3D_uqslo")

[node name="CSGBox3D2" type="CSGBox3D" parent="CSGCombiner3D2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7, -0.2, 0.208)
operation = 2
size = Vector3(2.9, 0.6, 2.8)

[node name="CauldronCore" type="Node3D" parent="."]

[node name="CoreMesh" type="MeshInstance3D" parent="CauldronCore"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.780213, 0)
material_override = SubResource("StandardMaterial3D_st1q8")
mesh = SubResource("CylinderMesh_lei01")

[node name="GPUParticles3D" type="GPUParticles3D" parent="CauldronCore"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.04129, 0)
amount = 60
lifetime = 2.0
process_material = SubResource("ParticleProcessMaterial_2sofk")
draw_pass_1 = SubResource("BoxMesh_g825k")

[node name="CoreArea" type="Area3D" parent="CauldronCore"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.96739, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="CauldronCore/CoreArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0)
shape = SubResource("CylinderShape3D_2sofk")

[node name="PotionSpawner" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.4, 0.398069, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="PotionSpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.3, -0.34, 0)
material_override = SubResource("StandardMaterial3D_g825k")
mesh = SubResource("BoxMesh_ftolm")

[node name="Marker3D" type="Marker3D" parent="PotionSpawner"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.332929, 1.99555, 0)

[node name="TypeALabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.16499, 4, 0.34)
modulate = Color(0, 0.568627, 1, 1)
text = "0/2"

[node name="TypeBLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.83501, 4, 0.34)
modulate = Color(1, 0.231373, 0.172549, 1)
text = "0/2"

[node name="TypeCLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.83501, 4, 0.34)
modulate = Color(1, 1, 0, 1)
text = "0/2"

[node name="TypeDLabel" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.83501, 4, 0.34)
modulate = Color(0.392157, 1, 0.388235, 1)
text = "0/2"

[connection signal="area_entered" from="CauldronCore/CoreArea" to="." method="_on_core_area_area_entered"]
[connection signal="body_entered" from="CauldronCore/CoreArea" to="." method="_on_core_area_body_entered"]
